--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGO_URI=mongodb+srv://ynudin1259:duDMZrPgkz1UIgfH@cluster0.luc8c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=your_jwt_secret
-PORT=3000
+MONGO_URI=mongodb+srv://ynudin1259:duDMZrPgkz1UIgfH@cluster0.luc8c.mongodb.net/todolist?retryWrites=true&w=majority&appName=Cluster0
+
+JWT_SECRET=somerandomlongstring123!@#
+PORT=5000
 
